[gd_scene load_steps=6 format=3 uid="uid://dc1sp2jtoim2o"]

[ext_resource type="Script" uid="uid://cmes5kq7bed81" path="res://pipe_spawner.gd" id="1_3d8p8"]
[ext_resource type="Script" uid="uid://hg8xq6s0dnko" path="res://crappy_bird.gd" id="1_atas2"]
[ext_resource type="PackedScene" uid="uid://cq7vm50udp3l0" path="res://pipe.tscn" id="2_gdpxa"]
[ext_resource type="PackedScene" uid="uid://k6bguoyl7p4q" path="res://bird.tscn" id="3_osc6a"]
[ext_resource type="PackedScene" uid="uid://cx6iy5es723se" path="res://hud.tscn" id="5_fho6e"]

[node name="CrappyBird" type="Node"]
script = ExtResource("1_atas2")

[node name="PipeSpawner" type="Node2D" parent="."]
script = ExtResource("1_3d8p8")
pipe_scene = ExtResource("2_gdpxa")

[node name="bird" parent="." instance=ExtResource("3_osc6a")]
position = Vector2(90, 0)

[node name="HUD" parent="." instance=ExtResource("5_fho6e")]

[connection signal="hit" from="bird" to="." method="_on_bird_hit"]
[connection signal="score" from="bird" to="." method="_on_bird_score"]
[connection signal="start_game" from="HUD" to="." method="start_game"]
